--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "antd": "^5.4.2",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -13,6 +14,7 @@
     "react-stripe-elements": "^4.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.62.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2"
   },
