--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 STRIPE_TEST_PUBLIC_KEY='pk_test_TYooMQauvdEDq54NiTphI7jx'
 STRIPE_TEST_SECRET_KEY='sk_test_4eC39HqLyjWDarjtT1zdp7dc'
+SKIP_PREFLIGHT_CHECK= true
