--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^5.4.2",
-    "axios": "^0.19.0",
+    "axios": "^1.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-stripe-elements": "^4.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -37,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "react-error-overlay": "^6.0.9",
-    "webpack": "^4.42.0"
+    "react-error-overlay": "^6.0.9"
   }
 }
